# hexlet_devops_for_dev

./: .gitignore  README.md
exercises/ansible/: Makefile  README.html  README.md  Vagrantfile  package-lock.json  package.json
exercises/docker/: Dockerfile  Makefile  README.html  README.md  package-lock.json  package.json
exercises/docker-compose/: .gitignore  LICENSE  Makefile  README.html  README.md  docker-compose.yml
exercises/docker-compose/app/: .gitignore  Dockerfile  api.py  pyproject.toml
exercises/docker-compose/app/data/: тест.json  тест.xlsx
exercises/docker-compose/app/tests/: test_api.py
exercises/dotfiles/: Makefile  README.html  README.md  Vagrantfile  playbook.yml  requirements.yml  test.yml
exercises/os-and-networks/: Dockerfile  Makefile  README.html  README.md  pyproject.toml  webapp.db
exercises/os-and-networks/examples/: Vagrantfile  commands.sh  playbook.yml
exercises/os-and-networks/provisioning/: playbook.yml
exercises/os-and-networks/webapp/: __init__.py  config.py
exercises/os-and-networks/webapp/comment/: forms.py  models.py  views.py
exercises/os-and-networks/webapp/picture/: forms.py  models.py  views.py
exercises/os-and-networks/webapp/templates/: base.html  index.html  menu.html  messages.html
exercises/os-and-networks/webapp/templates/comment/: comment_add.html
exercises/os-and-networks/webapp/templates/picture/: picture.html  picture_add.html
exercises/os-and-networks/webapp/templates/user/: login.html  register.html
exercises/os-and-networks/webapp/user/: decorators.py  forms.py  models.py  views.py
(+25 files in other folders)
