[tool.poetry]
name = "test_task_tncr"
version = "0.1.0"
description = "A test task. API service for getting and changing data files."
authors = ["Yury Borodich <xkxixnxgx@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.8"
Flask-RESTful = "^0.3.9"
Flask = "^2.0.1"
flasgger = "^0.9.5"
requests = "^2.26.0"
gunicorn = "^20.1.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
